--- a/sass/abstracts/_variables.scss
+++ b/sass/abstracts/_variables.scss
@@ -31,3 +31,10 @@ $color-cancel-btn: rgb(102, 40, 40);
 
 $color-wl-btn: rgb(158, 85, 85);
 $color-wl-btn-hv: rgb(223, 28, 28);
+
+/* Botones Edit / Delete / Cart / Order --- Admin Panel */
+$color-delete:rgb(214, 116, 116);
+$color-delete-hv:rgb(240, 10, 10);
+
+$color-edit: rgb(137, 137, 207);
+$color-edit-hv:rgb(10, 33, 240);
