--- a/sass/components/_modal.scss
+++ b/sass/components/_modal.scss
@@ -113,7 +113,8 @@
   }
 
   &__image {
-    width: 100%;
+    max-width: 80vh;
+    max-height: 55vh;
     border-radius: 10px;
     box-shadow: $shadow1;
   }
