--- a/sass/main.scss
+++ b/sass/main.scss
@@ -28,6 +28,7 @@
 @import 'pages/cart-detail';
 @import 'pages/login';
 @import 'pages/profile';
+@import 'pages/admin';
 
 @import 'themes/theme';
 @import 'themes/admin';
