--- a/sass/pages/_profile.scss
+++ b/sass/pages/_profile.scss
@@ -175,3 +175,8 @@ align-items: center;
         width: 40%;
     }
 }
+
+
+/* -------------------------------------------- ADMIN PROFILE ----------------------------------------- */
+
+
