--- a/sass/components/_alert.scss
+++ b/sass/components/_alert.scss
@@ -35,7 +35,8 @@
         font-size: 1rem;
         padding: 1rem;
     }
-    &__description{
+
+    &__description {
         font-size: .8rem;
         padding-bottom: .8rem;
     }
@@ -53,3 +54,39 @@
         right: .5rem;
     }
 }
+
+
+.modalQuestion {
+    display: flex;
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    backdrop-filter: blur(2px);
+    z-index: 20;
+    justify-content: center;
+    align-items: center;
+
+    &__contenido {
+        background-color: $color-alert-error;
+        padding: 20px;
+        border-radius: 5px;
+        margin: auto;
+    }
+    &__text, &__title{
+        text-align: center;
+        font-size: 1rem;
+        color: $color-font-ligth;
+        margin-bottom: 1rem;
+    }
+    &__buttons{
+        display: flex;
+        flex-direction: row;
+        justify-content: center;
+        
+    }
+
+}
+
+
