--- a/sass/pages/_cart-detail.scss
+++ b/sass/pages/_cart-detail.scss
@@ -103,6 +103,25 @@
 }
 
 
+.order{
+    display: flex;
+    width: 100%;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    &__container{
+        display: flex;
+        width: 100%;
+        flex-direction: column;
+        align-items:center;
+    }
+    &__button{
+        width: 20rem;
+        font-size: 2rem;
+    }
+}
+
+
 @media only screen and (max-width: 600px) {
     .row {
         flex-direction: column;
