--- a/sass/layout/_main.scss
+++ b/sass/layout/_main.scss
@@ -2,7 +2,9 @@
     //margin-top: 150px;//ALTURA DEL HEADER, HEADER COMO position: fixed
     padding: 1.5rem;
     color: $color-font-dark;
-
+    display: flex;
+    flex-direction: column;
+    height: 100%;
 }
 
 
