--- a/sass/main.scss
+++ b/sass/main.scss
@@ -29,6 +29,7 @@
 @import 'pages/login';
 @import 'pages/profile';
 @import 'pages/admin';
+@import 'pages/orders';
 
 @import 'themes/theme';
 @import 'themes/admin';
