arreglo de css en responsive

--- a/sass/components/_search.scss
+++ b/sass/components/_search.scss
@@ -40,6 +40,7 @@
         border: none;
         padding: .3rem;
         outline: 1px solid $color-font-ligth2;
+        height: 1.5rem;
     }
 
 }
