--- a/css/main.css
+++ b/css/main.css
@@ -578,6 +578,7 @@ body {
   border: none;
   padding: 0.3rem;
   outline: 1px solid rgba(143, 138, 138, 0.637);
+  height: 1.5rem;
 }
 
 .product-search {
@@ -807,7 +808,7 @@ body {
 }
 
 .article {
-  padding: 2rem;
+  padding: 0.8rem;
   width: 100%;
 }
 .article__name-product {
@@ -815,7 +816,7 @@ body {
   text-align: center;
   font-size: 1.5rem;
   margin-bottom: 1.5rem;
-  margin-top: -1rem;
+  margin-top: 0.5rem;
   color: rgb(236, 227, 227);
   text-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
 }
@@ -830,7 +831,7 @@ body {
   align-items: center;
 }
 .article__image {
-  max-width: 80vh;
+  max-width: 100%;
   max-height: 55vh;
   border-radius: 10px;
   box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 5px;
@@ -1357,6 +1358,18 @@ iframe {
     width: 100%;
     align-items: center;
   }
+  .row__partial-amount {
+    display: flex;
+    width: 80%;
+    justify-content: center;
+    margin: 0.5rem;
+  }
+  .row__description {
+    width: 80%;
+    margin: 0.5rem;
+    display: flex;
+    justify-content: center;
+  }
   .row-cart-detail {
     align-items: flex-start;
     width: 100%;
@@ -1742,7 +1755,8 @@ iframe {
   .fullRow__pic {
     position: relative;
     height: 15rem;
-    width: 30rem;
+    width: 100%;
+    max-height: 20rem;
     text-align: center;
   }
   .fullRow__pic img {
@@ -1776,13 +1790,15 @@ iframe {
     border-top: 1px solid rgb(27, 26, 26);
     border-bottom: 1px solid rgb(27, 26, 26);
   }
-  .arts-options__new-art {
+  .arts-options__new-art, .arts-options__new-usr, .user-options__new-art, .user-options__new-usr {
     margin: 1rem 1rem 1rem 1rem;
   }
   .search {
     margin: 0rem 1rem 1rem 1rem;
   }
   .orderBy {
+    display: flex;
+    flex-direction: row;
     margin: 0rem 1rem 1rem 1rem;
   }
 }
