--- a/sass/components/_modal.scss
+++ b/sass/components/_modal.scss
@@ -87,7 +87,7 @@
 }
 
 .article {
-  padding: 2rem;
+  padding: .8rem;
   width: 100%;
 
   &__name-product {
@@ -95,7 +95,7 @@
     text-align: center;
     font-size: 1.5rem;
     margin-bottom: 1.5rem;
-    margin-top: -1rem;
+    margin-top: .5rem;
     color: $color-font-ligth;
     text-shadow: $shadow0;
   }
@@ -113,7 +113,7 @@
   }
 
   &__image {
-    max-width: 80vh;
+    max-width: 100%;
     max-height: 55vh;
     border-radius: 10px;
     box-shadow: $shadow1;
