--- a/sass/pages/_admin.scss
+++ b/sass/pages/_admin.scss
@@ -235,7 +235,8 @@
         &__pic {
             position: relative;
             height: 15rem;
-            width: 30rem;
+            width: 100%;
+            max-height: 20rem;
             text-align: center;
 
             img {
@@ -280,10 +281,11 @@
 
     }
 
-    .arts-options {
-        &__new-art {
+    .arts-options, .user-options{
+        &__new-art, &__new-usr{
             margin: 1rem 1rem 1rem 1rem;
         }
+
     }
 
     .search {
@@ -291,6 +293,8 @@
     }
 
     .orderBy {
+        display: flex;
+        flex-direction: row;
         margin: 0rem 1rem 1rem 1rem;
     }
 }
